Added hotels
